# SafetyMAIN

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SafetyMAIN_Architecture_Manifesto_v0.1.docx  SafetyMAIN_Domain_Model_Specification_v0.1.docx  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_core_persistence_tables.py  0002_create_identity_tables.py  0003_organization_active_state.py  0004_invitations.py  0005_audit_events.py
backend/api/: __init__.py  app.py  dependencies.py  error_codes.py  exception_handlers.py  knowledge_object_params.py  logging.py  middleware.py  openapi.py  operation_ids.py  permission_denial_audit.py  relation_params.py  security.py
backend/bootstrap/: __init__.py  container.py  security_validation.py  seed_identity.py  settings.py  startup_logging.py
blueprint/tasks/: TASK-0001.md  TASK-0012.md  TASK-0013.md  TASK-0014.md  TASK-0015.md  TASK-0016.md  TASK-P1-002.md  TASK-P1-003.md  TASK-P1-004.md  TASK-P1-005.md  TASK-P2-001.md  TASK-P2-002.md  TASK-P2-003.md  TASK-P2-005.md  TASK-P2-006.md  TASK-P3-001.md  TASK-P3-002.md  TASK-P3-003.md  TASK-P3-004.md  TASK-P3-005.md  TASK-P3-006.md  TASK-P3-007.md  TASK-P4-001.md  TASK-P4-002.md  TASK-P4-003.md  TASK-P5-001.md  TASK-P5-002.md  TASK-P5-003.md  TASK-P5-004.md  TASK-P5-005.md  TASK-P6-001.md  TASK-P6-002.md  TASK-S1-001.md  TASK-S1-002.md  TASK-S1-003.md  TASK-S1-004.md  TASK-S1-005.md  US-0001.md  US-0002.md  US-0003.md  (+4 more)
docs/api/: APIFoundation.md  AdminAuditAPI.md  AdminInvitationAPI.md  AdminMembershipAPI.md  README.md  (+7 more)
(+412 files in other folders)
