[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "safetymain"
version = "0.1.0"
description = "AI-powered Safety Management Platform"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "pydantic>=2",
    "psycopg[binary]",
    "SQLAlchemy>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "db: tests requiring a running PostgreSQL database",
]

[tool.setuptools.packages.find]
include = ["backend*"]
